--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   #database: db/production.sqlite3
   #pool: 5
   #timeout: 5000
-  adapter: postgresql
+  adapter: sqlite3
   database: triffortapp
   pool: 5
   timeout: 5000
@@ -17,7 +17,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: sqlite3
   database: triffortapp
   pool: 5
   timeout: 5000
