--- a/config/database.yml
+++ b/config/database.yml
@@ -8,19 +8,25 @@ development:
   #database: db/production.sqlite3
   #pool: 5
   #timeout: 5000
-  adapter: sqlite3
-  database: triffortapp
+  adapter: postgresql
+  encoding: unicode
+  database: cassidy
+  host: localhost
   pool: 5
-  timeout: 5000
+  username: fcuser
+  password: enbake
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: triffortapp
+  adapter: postgresql
+  encoding: unicode
+  database: cassidy
+  host: localhost
   pool: 5
-  timeout: 5000
+  username: fcuser
+  password: enbake
 
 production:
   adapter: postgresql
